--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-parcelize'
     id 'com.google.gms.google-services'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -41,6 +42,14 @@ android {
 
 dependencies {
 
+    //library untuk livedata
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+
+    // Dagger and Hilt
+    implementation "com.google.dagger:hilt-android:2.45"
+    kapt "com.google.dagger:hilt-android-compiler:2.45"
+
+    //untuk load gambar
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     implementation "androidx.room:room-runtime:2.2.5"
