--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,18 @@
 buildscript {
+    repositories {
+        // Make sure that you have the following two repositories
+        ext.hilt_version = '2.45'
+        google()  // Google's Maven repository
+
+        mavenCentral()  // Maven Central repository
+
+        dependencies {
+            classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        }
+
+
+    }
+
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
     }
