--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ android {
     viewBinding{
         enabled = true
     }
+    lint{
+        lintConfig file("lint.xml")
+    }
 }
 
 dependencies {
