--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
     }
 
     dependencies {
+        //noinspection GradleDependency
         classpath 'com.google.gms:google-services:4.3.10'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
