--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'kotlin-parcelize'
     id 'com.google.gms.google-services'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -21,6 +22,23 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+    flavorDimensions("MovieApps")
+    productFlavors{
+
+        flav1{
+            applicationIdSuffix ".flav1"
+            dimension "MovieApps"
+        }
+
+        flav2{
+            applicationIdSuffix ".flav2"
+            dimension "MovieApps"
+            }
+
+    }
+
+
 
     buildTypes {
         release {
@@ -45,11 +63,27 @@ android {
 
 dependencies {
 
+
+
+    implementation 'androidx.test:core-ktx:1.4.0'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.9'
+
+
+    //mock
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    androidTestImplementation 'org.mockito:mockito-android:3.12.4'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
+    testImplementation 'org.robolectric:robolectric:4.6.1'
+
     //library untuk livedata
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
 
     // Dagger and Hilt
     implementation "com.google.dagger:hilt-android:2.45"
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     kapt "com.google.dagger:hilt-android-compiler:2.45"
 
     //untuk load gambar
